# tycho-simulation

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.integration-test  blocklist.toml  check.sh  release.config.js  solc_list_fixed.json
.cargo/: audit.toml  config.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build-and-push-integration-test.yaml  build-push-deploy-integration-test.yaml  notify-sdk.yaml  notify-tycho-compat.yaml  release_crate.yml  security.yml  tests-and-lints-template.yaml  v2-main-workflow.yaml
benches/: curve_factory_benchmarks.rs  swap_benchmarks.rs
examples/benchmark/: Readme.md  main.rs
examples/common/: mod.rs
examples/cowamm_execution/: Cargo.toml  Readme.md  build.rs
examples/cowamm_execution/artifacts/: BCowHelper.json
examples/cowamm_execution/src/: contracts.rs  main.rs  settlement.rs  support.rs  tenderly.rs
examples/depth_analysis/: main.rs
examples/explorer/: main.rs  ui.rs  utils.rs
examples/explorer/data_feed/: tycho.rs
examples/price-printer/: Readme.md  main.rs
examples/price_printer/: main.rs  ui.rs  utils.rs
examples/quickstart/: Readme.md  main.rs
examples/rfq_quickstart/: cli.rs  env.rs  main.rs  rfq_stream.rs  swap_executor.rs  tycho_client.rs
examples/simple_solver/: main.rs  mod.rs  ui.rs
examples/stability_monitor/: main.rs
examples/swap_to_price_benchmark/: README.md  benchmark.rs  debug_iteration.rs  main.rs  reporting.rs  snapshot.rs
examples/use_serialized_state/: Readme.md  data.json  main.rs
simple_searcher/: Cargo.toml
simple_searcher/src/: main.rs
simple_searcher/src/graph/: graph.rs
src/: lib.rs  models.rs  safe_math.rs  serde_helpers.rs  utils.rs
src/evm/: account_storage.rs  brent.rs  chandrupatla.rs  decoder.rs  external_data.rs  mod.rs  query_pool_swap.rs  simulation.rs  stream.rs  traces.rs  tycho_db.rs  tycho_models.rs
src/evm/engine_db/: engine_db_interface.rs  mod.rs  simulation_db.rs  tycho_db.rs  utils.rs
src/evm/protocol/: clmm.rs  events.rs  filters.rs  mod.rs  safe_math.rs  state.rs  tycho.rs  u256_num.rs
src/evm/protocol/aerodrome_slipstream/: state.rs  tycho_decoder.rs
src/evm/protocol/aerodrome_slipstreams/: decoder.rs  mod.rs  state.rs
src/evm/protocol/aerodrome_v1/: decoder.rs  mod.rs  solidly_stable.rs  state.rs  tycho_decoder.rs
src/evm/protocol/cfmm/: mod.rs  protocol.rs  reserve_price.rs
src/evm/protocol/clmm/: protocol.rs
src/evm/protocol/cowamm/: bmath.rs  const.rs  constants.rs  decoder.rs  error.rs  mod.rs  state.rs  tycho_decoder.rs
src/evm/protocol/cpmm/: protocol.rs  reserve_price.rs
src/evm/protocol/curve_stableswap/: decoder.rs  math.rs  mod.rs  on_chain_test.rs  state.rs
src/evm/protocol/dodo/: state.rs
src/evm/protocol/dodo_v2/: mod.rs  state.rs  tycho_decoder.rs
src/evm/protocol/ekubo/: decoder.rs  state.rs  test_cases.rs  tycho_decoder.rs
src/evm/protocol/ekubo_v3/: addresses.rs  attributes.rs  decoder.rs  mod.rs  state.rs  test_cases.rs
src/evm/protocol/erc4626/: decoder.rs  mod.rs  state.rs  vm.rs
src/evm/protocol/etherfi/: decoder.rs  state.rs
src/evm/protocol/fluid/: decoder.rs  mod.rs  v1.rs  vm.rs
src/evm/protocol/fluid_v2/: decoder.rs  mod.rs  state.rs
src/evm/protocol/lido/: decoder.rs  mod.rs  state.rs
src/evm/protocol/pancakeswap_v2/: decoder.rs  state.rs  tycho_decoder.rs
src/evm/protocol/rfq/: client.rs  errors.rs  indicative_price.rs  mod.rs  price_estimator.rs  state.rs  stream.rs
src/evm/protocol/rocketpool/: decoder.rs  mod.rs  state.rs
src/evm/protocol/shibaswap_v2/: enums.rs  mod.rs  state.rs  tycho_decoder.rs
src/evm/protocol/solidly_stable/: protocol.rs
src/evm/protocol/uniswap_v2/: decoder.rs  (+5 more)
src/evm/traces/: config.rs  decoder.rs  etherscan.rs  mod.rs  renderer.rs  signatures.rs
src/protocol/: decoder.rs  errors.rs  macros.rs  mod.rs  models.rs  state.rs  stream.rs  stream_decoder.rs  tycho.rs  validation.rs
src/protocol/uniswap_v2/: state.rs
src/protocol/uniswap_v3/: state.rs  tick_math.rs  tycho_decoder.rs
src/protocol/vm/: state.rs
src/rfq/: client.rs  constants.rs  mod.rs  models.rs  stream.rs
src/rfq/protocols/: mod.rs
src/swap_to_price/: mod.rs
src/swap_to_price/strategies/: history_based.rs  history_based_archive.rs  interpolation_search.rs  mod.rs
tests/assets/decoder/: uniswap_v2_with_tvl_delta.json  uniswap_v2_with_tvl_snapshot.json
tycho-integration-test/: Cargo.toml  METRICS.md  README.md
tycho-integration-test/src/: execution_simulator.rs  main.rs  metrics.rs  ot.rs  revert_reason.rs  rfq_stream_processor.rs  statistics.rs  stream_processor.rs  swap_simulation.rs  tenderly.rs  traces.rs  utils.rs
tycho-integration-test/src/execution/: encoding.rs  execution_simulator.rs  mod.rs  models.rs  tenderly.rs  traces.rs
tycho-integration-test/src/stream_processor/: mod.rs  protocol_stream_processor.rs  rfq_stream_processor.rs
tycho-simulation-ts/: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
tycho-simulation-ts/examples/: spot_price.ts
tycho-simulation-ts/scripts/: copy-lib.js
tycho-simulation-ts/src/: lib.rs
tycho-test/: Cargo.toml
tycho-test/src/: lib.rs  rpc_tools.rs  validation.rs
tycho-test/src/execution/: encoding.rs  execution_simulator.rs  four_byte_client.rs  mod.rs  models.rs  tenderly.rs  traces.rs
tycho-test/src/stream_processor/: mod.rs
tycho_rfq/: Cargo.toml
tycho_rfq/src/: client.rs  errors.rs  indicatively_priced.rs  lib.rs  mod.rs  price_estimator.rs  state.rs  stream.rs
tycho_rfq/src/protocols/: bebop.rs  mod.rs
tycho_rfq/src/protocols/bebop/: client.rs  decoder.rs  mod.rs  state.rs
tycho_simulation_py/: Cargo.toml  Readme.md  build_tycho_simulation_wheel.sh  protosim_evm_demo.py  pyproject.toml
tycho_simulation_py/python/test/: test_evm_token.py  test_third_party_pool.py
tycho_simulation_py/python/tycho_simulation_py/: models.py  quickstart.py
tycho_simulation_py/src/: simulation_py.rs  structs_py.rs
tycho_simulation_python_bindings/: Cargo.toml
tycho_simulation_python_bindings/src/: lib.rs  models.rs
(+110 files in other folders)
