[package]
name = "protosim"
version = "0.24.0"
edition = "2021"

[workspace]
members = ["protosim_py"]

[dependencies]
# Serialization/Deserialization
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
hex = "0.4.3"
chrono = { version = "0.4.26", features = ["serde"] }

# Error handling
thiserror = "1"

# Async & concurrency
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.28"

# Logging & Tracing
tracing = "0.1.37"

# Utility
num-traits = "0.2.17"
dotenv = "0.15.0"

# Enum utilities
strum = "0.25.0"
strum_macros = "0.25.2"

# Caching
mini-moka = "0.10"

# Tycho dependencies
tycho-core = { git = "ssh://github.com/propeller-heads/tycho-indexer.git", package = "tycho-core", tag = "0.34.0" }
tycho-client = { git = "ssh://github.com/propeller-heads/tycho-indexer.git", package = "tycho-client", tag = "0.34.0" }

# EVM dependencies
ethabi = { version = "13.0" , optional = true}
# some core models still reyl on ethers types instead of bytes, once this is addressed this will become optional.
ethers = { version = "2.0.13"}
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "2544793" , optional = true}
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "2544793" , optional = true}
revm = { version = "12.1.0", features = ["ethersdb", "serde"], optional = true }
revm-inspectors = { version = "0.5", features = ["serde"] , optional = true}

[dev-dependencies]
mockito = "1.1.1"
warp = "0.3.5"
approx = "0.5.1"
rstest = "0.18.2"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
tempfile = "3.13.0"

[features]
default = ["evm"]
network_tests = []
evm = [
    "dep:ethabi", "dep:foundry-config", "dep:foundry-evm", "dep:revm", "dep:revm-inspectors"
]

[profile.bench]
debug = true
