[package]
name = "tycho-integration-test"
version.workspace = true
edition = "2021"

[dependencies]
actix-web = "4.11.0"
alloy = { workspace = true, features = ["rpc-types-eth", "sol-types"] }
clap = { version = "4.5.48", features = ["derive"] }
dotenv = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
miette = { version = "7.6.0" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = "0.9.2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tycho-client = { workspace = true }
tycho-common = { workspace = true }
tycho-simulation = { path = "..", features = ["evm"] }
tycho-test = { path = "../tycho-test" }
