[package]
name = "tycho-integration-test"
version.workspace = true
edition = "2021"

[dependencies]
alloy = { workspace = true, features = ["rpc-types-eth", "sol-types"] }
clap = { version = "4.5.48", features = ["derive"] }
dotenv = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
miette = { version = "7.6.0" }
rand = "0.9.2"
tokio = { workspace = true }
tracing = { workspace = true }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
actix-web = "4.11.0"
tycho-client = { workspace = true }
tycho-common = { workspace = true }
tycho-simulation = { path = "..", features = ["evm"] }
tycho-test = { path = "../tycho-test" }
tracing-subscriber = { workspace = true }
