[package]
name = "tycho-test"
version.workspace = true
edition = "2021"

[dependencies]
alloy = { workspace = true, features = ["rpc-types-eth", "sol-types"] }
alloy-chains = "0.2.6"
alloy-rpc-types-trace = "1.0.38"
colored = "3.0.0"
dotenv = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
lru = "0.16.1"
num-bigint = { workspace = true }
num-traits = { workspace = true }
miette = { version = "7.6.0" }
regex = "1.12.2"
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.9.2"
tokio = { workspace = true }
tokio-retry2 = { version = "0.6.0", features = ["jitter"] }
tracing = { workspace = true }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
actix-web = "4.11.0"
tycho-client = { workspace = true }
tycho-common = { workspace = true }
tycho-ethereum = { workspace = true }
tycho-execution = { workspace = true }
tycho-simulation = { path = "..", features = ["evm"] }
urlencoding = "2.1.3"
tracing-subscriber = { workspace = true }
