[package]
name = "tycho_rfq"
version = "0.1.0"
edition = "2024"

[dependencies]
tycho-simulation = { path = "../" }
alloy = { version = "1.0.6" }
tokio = { version = "1.38.0", features = ["full"] }
num-bigint = { version = "0.4", features = ["serde"] }
async-trait = "0.1.88"
reqwest = "0.11.27"
thiserror = "2.0.12"
chrono = { version = "0.4.26", features = ["serde"] }