[package]
name = "cowamm_execution"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
alloy = { workspace = true, features = ["sol-types"] }
alloy-rpc-types-eth = "1.0.42"
app_data = { package = "app-data", git = "https://github.com/cowprotocol/services" }
anyhow = "1.0.100"
clap = { version = "4.6.0", features = ["derive", "env"] }
dotenv = { workspace = true }
ethrpc = { git = "https://github.com/cowprotocol/services" }
ethcontract = { git = "https://github.com/cowprotocol/ethcontract-rs", rev = "8e112a88988040cde6110379ee6d1be768a13244", default-features = false, features = ["aws-kms", "derive", "http-rustls-tls"] }
futures = { workspace = true }
hex = { workspace = true }
model = { git = "https://github.com/cowprotocol/services" }
num-bigint = { workspace = true }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde_json = { workspace = true }
services_contracts = { package = "contracts", git = "https://github.com/cowprotocol/services" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features = ["env-filter", "fmt"] }
tycho-simulation = { path = "../.." }
urlencoding = "2.1.3"

[build-dependencies]
ethcontract-generate = { git = "https://github.com/cowprotocol/ethcontract-rs", rev = "8e112a88988040cde6110379ee6d1be768a13244" }
